# ToolboxPluginTemplate

./: CMakeLists.txt  CMakePresets.json  README.md
src/: MyToolboxPlugin.cpp  MyToolboxPlugin.h
